# scaleout-ultralytics-tutorial

./: .gitignore  README.md  client_config.yaml  pyproject.toml  requirements.txt
client/: data.py  data.yaml  fedn.yaml  global_config.yaml  model.py  model.yaml  python_env.yaml  scaleout.yaml  startup.py  train.py  validate.py
examples/african-wildlife/: README.md
examples/welding-defect-detection/: README.md
